# skala

./: .gitignore  README.md  main.py  pyproject.toml
skala/: cli.py  db.py  elo.py  scraper.py
